--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://rds-dev.c7jrudewruue.ap-south-1.rds.amazonaws.com:3306/rds-dev
+spring.datasource.username=admin
+spring.datasource.password=A$win41192
