--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=5000
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://<URL>
-#spring.datasource.username=UserName
-#spring.datasource.password=Password
+spring.datasource.url=jdbc:mysql://${RDS_HOST}:${RDS_PORT}/${RDS_NAME}
+spring.datasource.username=${RDS_USERNAME}
+spring.datasource.password=${RDS_PASSWORD}
